--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Lopez</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand">
 </head>
 <body>
 
 <div class="navbar">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
         <a href="#contact">Contact</a>
-        <a href="#about">About</a>
 </div>
 
 <div class="mainbody">
@@ -24,9 +23,14 @@
         <h1>Sarah Lopez</h1>
     </div>
     <div class="Description">
-        <h3>Web Development Immersive Student</h3>
+        <h4>Web Development Immersive Student</h4>
+        <h6>Trying to figure out this whole coding thing</h6>
     </div>
-    <a href="https://github.com/slopez323"><img src="github.png" height="30px" alt="github icon"> </a>
+    <br> <br>
+    <div class="icons">
+    <a href="https://github.com/slopez323"><img src="icons/github.png" height="20px" alt="github icon"> </a> &nbsp;
+    <a href="mailto:sarah.lopez@codeimmersives.com"><img src="icons/mail.png" height=20px" alt="mail icon"> </a>
+    </div>
 </div>
 
 <div class="myphoto">
