--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,12 @@
     <title>Contact</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="contactstyles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand|Reenie Beanie">
 </head>
 <body>
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <div class="topname">Sarah</div>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -20,7 +21,7 @@
 <div class="contactdetails">
     <h1>CONTACT ME</h1>
     <form action="mailto:sarah.lopez@codeimmersives.com">
-        <input type="submit" value="Send email" />
+        <button type="submit" value="Send email">Send email</button>
     </form>
 </div>
 
