--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sarah Lopez</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand|Reenie Beanie">
 </head>
 <body>
 
 <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <div class="topname">Sarah</div>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
-        <a href="#contact">Contact</a>
+        <a href="contact.html">Contact</a>
 </div>
 
 <div class="mainbody">
