--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,12 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="portfoliostyles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand|Reenie Beanie">
 </head>
 <body>
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <div class="topname">Sarah</div>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -19,7 +20,7 @@
 
 <div class="projects">
     <h1>PROJECT PORTFOLIO</h1>
-    <p></p>
+    <p>Visit my <a href="https://github.com/slopez323">Github profile</a> to see my projects</p>
 </div>
 
 </body>
