--- a/about.html
+++ b/about.html
@@ -7,11 +7,12 @@
     <title>About</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="aboutstyles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Quicksand|Reenie Beanie">
 </head>
 <body>
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <div class="topname">Sarah</div>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
